[gd_scene load_steps=2 format=3 uid="uid://driwxbfllwsuk"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_tbvti"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_tbvti")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 125.0
offset_right = 17.0
offset_bottom = 148.0
grow_horizontal = 2
text = "Title"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -74.0
offset_right = 175.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="Filler1" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="Filler2" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EndButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="Control/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/EndButton" to="." method="_on_end_button_pressed"]
